landing page for fiug welcome

--- a/playground/encrypt-web-worker.html
+++ b/playground/encrypt-web-worker.html
@@ -1,5 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+	<head>
+		<title>encrypt web worker</title>
+		<meta charset="utf-8">
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="mobile-web-app-capable" content="yes">
+
+		<meta name="color-scheme" content="dark light">
+	</head>
+	
 	<style>
 
 		body {
