--- a/playground/rss-feed/rss-feed.html
+++ b/playground/rss-feed/rss-feed.html
@@ -1,8 +1,23 @@
+<!doctype html>
 <html class="dark-enabled">
+	<head>
+		<title>RSS Feed</title>
+		<meta charset="utf-8">
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="mobile-web-app-capable" content="yes">
+
+		<meta name="color-scheme" content="dark light">
+
+		<link rel="stylesheet" href="bookmarks.css">
+	</head>
+
 	<link rel="stylesheet" href="/colors.css">
 
 	<style>
 		body {
+			background-color: var(--main-theme-color);
 			color: var(--main-theme-text-invert-color);
 			margin-right: 15px;
 			font-family: sans-serif;
@@ -28,7 +43,7 @@
 		.feed-item {
 			/* background: var(--main-theme-background-color); */
 			padding: 0.1em;
-			margin-bottom: .3em
+			margin-bottom: 1em
 		}
 		.feed-item { margin-top: 0.25em; }
 		.feed-item .content {
@@ -93,7 +108,7 @@
 		(async () => {
 			const parser = new RSSParser();
 			const CORS_PROXY = 'https://api.allorigins.win/raw?url='
-			const feedUrl = "https://hnrss.org/frontpage?count=20";
+			const feedUrl = "https://hnrss.org/frontpage?count=40";
 			const feed = await parser.parseURL(CORS_PROXY+feedUrl);
 			FeedItem(feed, 'title');
 			feed.items.forEach(FeedItem);
