rss-feed: add notes

--- a/playground/rss-feed/rss-feed.html
+++ b/playground/rss-feed/rss-feed.html
@@ -15,6 +15,13 @@
 
 	<link rel="stylesheet" href="/colors.css">
 
+	<!--
+
+	TODO: add save to pocket button:
+		https://getpocket.com/publisher/button_docs
+
+	-->
+
 	<style>
 		body {
 			background-color: var(--main-theme-color);
