--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			['playground/tower.defense/tower.defense', 'tower defense'],
 			['playground/wave-function-collapse/wave-function', 'wave function collapse'],
 			['playground/webgl-quad/webgl-quad', 'webgl-quad'],
+			['playground/pokedex/pokedex', 'pokedex'],
 		];
 
 		experiments.forEach(exp => {
