--- a/playground/pokedex/pokedex.html
+++ b/playground/pokedex/pokedex.html
@@ -16,9 +16,11 @@
 			justify-content: center;
 			align-items: center;
 			height: 70vh;
-			margin: 1em;
+			font-size: 18px;
+			max-width: 800px;
+			margin: auto;
+			font-size: 18px;
 		}
-		body { font-size: 18px; }
 		input { font-size: 1em; }
 		body div {
 			width: 100%;
