pokedex init images with blank on load

--- a/playground/pokedex/pokedex.html
+++ b/playground/pokedex/pokedex.html
@@ -50,9 +50,9 @@
 
 	<body>
 		<div id="images">
-			<img id="from-image" src=""></img>
-			<img id="base-image" src=""></img>
-			<img id="to-image" src=""></img>
+			<img id="from-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></img>
+			<img id="base-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></img>
+			<img id="to-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></img>
 		</div>
 		<div id="labels">
 			<pre id="from-text"></pre>
