--- a/playground/pokedex/pokedex.html
+++ b/playground/pokedex/pokedex.html
@@ -35,6 +35,7 @@
 		body div#labels {
 			margin-top: -2.75em;
 			margin-bottom: 1.5em;
+			pointer-events: none;
 		}
 		body img {
 			width: auto;
@@ -43,6 +44,7 @@
 			border-radius: 15px;
 			border: 1px solid #333;
 			image-rendering: pixelated;
+			cursor: pointer;
 		}
 		img + img {
 			margin-left: 0.5em;
@@ -79,6 +81,7 @@
 			: 'data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==';
 		const imageText = (x) => x.identifier ? `${x.identifier} [${x.id}]` : '';
 
+		const allImages = document.getElementById('images');
 		const fromImage = document.getElementById('from-image');
 		const baseImage = document.getElementById('base-image');
 		const toImage = document.getElementById('to-image');
@@ -98,12 +101,16 @@
 				baseText.textContent = '';
 				return;
 			}
-			fromImage.src = imageLink(raw.from.id);
-			toImage.src = imageLink(raw.to.id);
-			baseImage.src = imageLink(raw.base.id);
-			fromText.textContent = imageText(raw.from);
-			toText.textContent = imageText(raw.to);
-			baseText.textContent = imageText(raw.base);
+			[
+				[raw.from, fromImage, fromText],
+				[raw.to, toImage, toText],
+				[raw.base, baseImage, baseText],
+			].forEach(x => {
+				const [data, image, text] = x;
+				image.src = imageLink(data.id);
+				image.dataset.name = data.identifier;
+				text.textContent = imageText(data);
+			});
 		};
 		searchAndShow();
 		search.oninput = searchAndShow;
@@ -111,6 +118,12 @@
 			search.selectionStart = 0;
 			search.selectionEnd = search.value.length;
 		}
+		
+		allImages.onclick = (e) => {
+			const {name} = e.target.dataset;
+			if(!name) return;
+			window.open("https://pokemondb.net/pokedex/" + name);
+		};
 	</script>
 
 </html>
