pokedex misc css refactor

--- a/playground/pokedex/pokedex.html
+++ b/playground/pokedex/pokedex.html
@@ -32,12 +32,12 @@
 			justify-content: space-around;
 			align-items: center;
 		}
-		body div#labels {
+		#labels {
 			margin-top: -2.75em;
 			margin-bottom: 1.5em;
 			pointer-events: none;
 		}
-		body img {
+		#images img {
 			width: auto;
 			flex: 1;
 			background: #1a1a1a;
@@ -49,7 +49,7 @@
 		img + img {
 			margin-left: 0.5em;
 		}
-		div > pre {
+		#labels > pre {
 			text-transform: capitalize;
 			flex: 1;
 			text-align: center;
