pokedex responsive font size

--- a/playground/pokedex/pokedex.html
+++ b/playground/pokedex/pokedex.html
@@ -10,15 +10,14 @@
 	</head>
 
 	<style>
+		html { font-size: calc(0.5em + 1vmin); }
 		body {
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
 			height: 70vh;
-			font-size: 18px;
 			margin: 1em;
-			font-size: 18px;
 		}
 		.container {
 			flex-direction: column;
@@ -52,6 +51,7 @@
 		#labels > pre {
 			text-transform: capitalize;
 			flex: 1;
+			width: 100%;
 			text-align: center;
 		}
 		#search { padding: 0.25em; }
