--- a/playground/pokedex/pokedex.html
+++ b/playground/pokedex/pokedex.html
@@ -10,7 +10,12 @@
 	</head>
 
 	<style>
-		html { font-size: calc(0.5em + 1vmin); }
+		html, input {
+			font-size: calc(0.5em + 1vmin);
+			font-family: sans-serif;
+			color: #ccc;
+		}
+		input { border: 0; border-radius: 0.25em; padding: 0.5em 0.75em; }
 		body {
 			display: flex;
 			flex-direction: column;
@@ -22,64 +27,98 @@
 		.container {
 			flex-direction: column;
 			justify-content: center;
+			width: 100%;
 			max-width: 800px;
 		}
-		input { font-size: 1em; }
-		body div {
+		.container > div {
 			width: 100%;
 			display: flex;
 			justify-content: space-around;
 			align-items: center;
+		}
+		.container > div + div {
+			margin-top: 1em;
 		}
 		#labels {
 			margin-top: -2.75em;
 			margin-bottom: 1.5em;
 			pointer-events: none;
 		}
-		#images img {
+		#images > div {
 			width: auto;
 			flex: 1;
 			background: #1a1a1a;
-			border-radius: 15px;
-			border: 1px solid #333;
+			border-radius: 10px;
+			position: relative;
+			overflow: hidden;
+			padding-top: 2em;
+		}
+		#images img {
+			width: 100%;
 			image-rendering: pixelated;
 			cursor: pointer;
 		}
-		img + img {
+		#images > div + div {
 			margin-left: 0.5em;
 		}
-		#labels > pre {
+		.label {
 			text-transform: capitalize;
 			flex: 1;
 			width: 100%;
-			text-align: center;
+			position: absolute;
+			top: 0;
+			display: flex;
+			justify-content: space-between;
+			box-sizing: border-box;
 		}
-		#search { padding: 0.25em; }
+		.label-number, .label-name {
+			padding: 0.4em 1em;
+		}
+		.label-name {
+			border-radius: 0 0 10px;
+			background: #242728;
+			flex: 1;
+		}
+		.label-number {
+			color: #888;
+			background: #1a1a1a;
+		}
 	</style>
 
 	<body>
 		<div class="container">
 			<div id="images">
-				<img id="from-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></img>
-				<img id="base-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></img>
-				<img id="to-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></img>
+				<div>
+					<img id="from-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" />
+					<div id="from-text" class="label">&nbsp;</div>
+				</div>
+				<div>
+					<img id="base-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" />
+					<div id="base-text" class="label">&nbsp;</div>
+				</div>
+				<div>
+					<img id="to-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" />
+					<div id="to-text" class="label">&nbsp;</div>
+				</div>
 			</div>
-			<div id="labels">
-				<pre id="from-text">&nbsp;</pre>
-				<pre id="base-text">&nbsp;</pre>
-				<pre id="to-text">&nbsp;</pre>
+			<div>
+				<input id="search" type="text" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
 			</div>
-			<input id="search" type="text" value="foo" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
 		</div>
 	</body>
 
 	<script type="module">
-		import { findPokemon } from './pokedex.js';
+		import { findPokemon, random } from './pokedex.js';
 		const imageLink = (number='') => 
 			number+''
 			? `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${number}.png`
 			: 'data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==';
-		const imageText = (x) => x.identifier ? `${x.identifier} [${x.id}]` : '';
+		const imageText = (x) => x.identifier
+			? `
+				<div class="label-name">${x.identifier}</div>
+				<div class="label-number">${(x.id+'').padStart(3,'0')}</div>
+				`
+			: '';
 
 		const allImages = document.getElementById('images');
 		const fromImage = document.getElementById('from-image');
@@ -89,6 +128,9 @@
 		const baseText = document.getElementById('base-text');
 		const toText = document.getElementById('to-text');
 		const search = document.getElementById('search');
+
+		const MAX_POKE_ID = 898;
+		search.value = random(1, MAX_POKE_ID);
 
 		const searchAndShow = () => {
 			const { raw, error } = findPokemon(search.value.toLowerCase());
@@ -109,7 +151,7 @@
 				const [data, image, text] = x;
 				image.src = imageLink(data.id);
 				image.dataset.name = data.identifier;
-				text.textContent = imageText(data);
+				text.innerHTML = imageText(data);
 			});
 		};
 		searchAndShow();
