--- a/playground/pokedex/pokedex.html
+++ b/playground/pokedex/pokedex.html
@@ -9,6 +9,21 @@
 		<meta name="color-scheme" content="dark">
 
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
+		<link rel="manifest" href="manifest.json">
+
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="application-name" content="Pokédex">
+		<meta name="apple-mobile-web-app-title" content="Pokédex">
+		<meta name="theme-color" content="#1a1a20">
+		<meta name="msapplication-navbutton-color" content="#1a1a20">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+		<meta name="msapplication-starturl" content="https://welcome.fiug.dev/playground/pokedex/pokedex.html">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+		<link rel="icon" href="pokedex.png">
+		<link rel="apple-touch-icon" href="pokedex.png">
 	</head>
 
 	<style>
