--- a/playground/pokedex/pokedex.html
+++ b/playground/pokedex/pokedex.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>pokemon evo search</title>
+		<title>Pokédex Search</title>
 		<meta name="description" content="color picker">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
@@ -14,8 +14,8 @@
 
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="application-name" content="Pokédex">
-		<meta name="apple-mobile-web-app-title" content="Pokédex">
+		<meta name="application-name" content="Pokédex Search">
+		<meta name="apple-mobile-web-app-title" content="Pokédex Search">
 		<meta name="theme-color" content="#1a1a20">
 		<meta name="msapplication-navbutton-color" content="#1a1a20">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
