pokedex hope to open number keyboard on mobile..

--- a/playground/pokedex/pokedex.html
+++ b/playground/pokedex/pokedex.html
@@ -123,7 +123,7 @@
 				</div>
 			</div>
 			<div>
-				<input id="search" type="text" pattern="\d*" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
+				<input id="search" type="tel" pattern="\d*" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
 			</div>
 		</div>
 	</body>
