--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		const experiments = [
 			['playground/bookmarks/bookmarks', 'bookmarks'],
 			['playground/css-3d', 'css-3d'],
-			//['playground/css-doodle', 'css-doodle'],
+			['playground/css-doodle', 'css-doodle'],
 			['playground/encrypt-web-worker', 'encrypt-web-worker'],
 			['playground/iching/iching', 'iching'],
 			['playground/kalman/kalman', 'kalman'],
