--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			['playground/wave-function-collapse/wave-function', 'wave function collapse'],
 			['playground/webgl-quad/webgl-quad', 'webgl-quad'],
 			['playground/pokedex/pokedex', 'pokedex'],
+			['playground/gameAsGame/index', 'GAME game'],
 		];
 
 		experiments.forEach(exp => {
