--- a/playground/gameAsGame/index.html
+++ b/playground/gameAsGame/index.html
@@ -15,65 +15,9 @@
 			<span class="serious rainbow-text">game</span>
 		</div>
 		<div class="wrapper">
-			<div class="board">
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-
-				<div></div>
-				<div></div>
-				<div></div>
-				<div class="selected"></div>
-			</div>
+			<div class="board"></div>
 		</div>
-		<div class="controls">
-			<pre data-piece="♔">white king    ♔</pre>
-			<pre data-piece="♕">white queen   ♕</pre>
-			<pre data-piece="♖">white rook    ♖</pre>
-			<pre data-piece="♗">white bishop  ♗</pre>
-			<pre data-piece="♘">white knight  ♘</pre>
-			<pre data-piece="♙">white pawn    ♙</pre>
-			<pre data-piece="♚">black king    ♚</pre>
-			<pre data-piece="♛">black queen   ♛</pre>
-			<pre data-piece="♜">black rook    ♜</pre>
-			<pre data-piece="♝">black bishop  ♝</pre>
-			<pre data-piece="♞">black knight  ♞</pre>
-			<pre data-piece="♟︎">black pawn    ♟︎</pre>
-		</div>
+		<div class="controls"></div>
 		<script src="./index.js" type="module"></script>
 	</body>
 </html>
-
-
-<!--
-white king    ♔
-white queen   ♕
-white rook    ♖
-white bishop  ♗
-white knight  ♘
-white pawn    ♙
-
-black king    ♚
-black queen   ♛
-black rook    ♜
-black bishop  ♝
-black knight  ♞
-black pawn    ♟︎
-
--->
