game game: refactor

--- a/playground/gameAsGame/index.html
+++ b/playground/gameAsGame/index.html
@@ -8,16 +8,9 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<link rel="stylesheet" href="index.css">
 		<meta name="color-scheme" content="dark light">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" integrity="sha512-dLxUelApnYxpLt6K2iomGngnHO83iUvZytA3YjDUCjT0HDOHKXnVYdf3hU4JjM8uEhxf9nD1/ey98U3t2vZ0qQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	</head>
 	<body>
-		<div class="header">
-			<span class="orbitron three-dee">game</span>
-			<span class="serious rainbow-text">game</span>
-		</div>
-		<div class="wrapper">
-			<div class="board"></div>
-		</div>
-		<div class="controls"></div>
 		<script src="./index.js" type="module"></script>
 	</body>
 </html>
