--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			['playground/webgl-quad/webgl-quad', 'webgl-quad'],
 			['playground/pokedex/pokedex', 'pokedex'],
 			['playground/gameAsGame/index', 'GAME game'],
+			['playground/sky-gradient/index', 'Sky Sim'],
 		];
 
 		experiments.forEach(exp => {
