--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			['playground/pokedex/pokedex', 'pokedex'],
 			['playground/gameAsGame/index', 'GAME game'],
 			['playground/sky-gradient/index', 'Sky Sim'],
+			['playground/stack-css/index', 'Stack Game'],
 		];
 
 		experiments.forEach(exp => {
