--- a/playground/stack-css/index.html
+++ b/playground/stack-css/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Sky Sim</title>
+		<title>Stack Game</title>
 		<meta charset="utf-8">
 		<meta name="description" content="">
 		<meta name="author" content="">
@@ -17,7 +17,6 @@
 ORIGINAL: https://codepen.io/finnhvman/pen/xJRMJp
 found at https://1stwebdesigner.com/12-incredible-pure-css-experiments/
 -->
-
 
 <form class="screen" novalidate>
   <input id="start" type="checkbox" tabindex="-1">
@@ -334,11 +333,11 @@ found at https://1stwebdesigner.com/12-incredible-pure-css-experiments/
   <div class="points"></div>
   <label class="start" for="start" tabindex="-1">
         PURE CSS<br>STACK
-    </label>
+  </label>
   <button type="reset" tabindex="-1">
         CLICK OR TAP<br>
         TO RESTART
-    </button>
+  </button>
 </form>
 
 </body>
