sky sim tweak celestial motion

--- a/playground/sky-gradient/index.html
+++ b/playground/sky-gradient/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="index.css">
 		<meta name="color-scheme" content="dark light">
 		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="https://cdn.skypack.dev/-/simpledotcss@v1.0.0-iq1EIDtnpx4VjXOn5kG1/dist=es2020,mode=raw/simple.min.css">
 		<link rel="icon" type="image/svg+xml" href="./favicon.svg">
 		<script src="https://cdn.jsdelivr.net/gh/mourner/suncalc/suncalc.js"></script>
 		<script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
@@ -22,6 +23,9 @@
 		</div>
 		<div id="moon-contain">
 			<div id="moon"></div>
+		</div>
+		<div class="slidecontainer">
+			<input type="range" min="0" max="100" value="" id="time-slider">
 		</div>
 	</body>
 	<script src="./index.js" type="module"></script>
