--- a/playground/uxn/rom.html
+++ b/playground/uxn/rom.html
@@ -12,7 +12,9 @@
 
 	<body>
 		<canvas id="screen" width="384" height="256"></canvas>
-		<a id="load-button" href="#"></a>
+		<select id="rom-selector">
+			<option value="">Select ROM</option>
+		</select>
 	</body>
 
 	<script type="module" src="rom.js"></script>
