add web uxn to index

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			['playground/gameAsGame/index', 'GAME game'],
 			['playground/sky-gradient/index', 'Sky Sim'],
 			['playground/stack-css/index', 'Stack Game'],
+			['playground/uxn/rom', 'Web UXN'],
 		];
 
 		experiments.forEach(exp => {
