--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			['playground/sky-gradient/index', 'Sky Sim'],
 			['playground/stack-css/index', 'Stack Game'],
 			['playground/uxn/rom', 'Web UXN'],
+			['playground/tictactoe/index', 'Tic Tac Toe'],
 		];
 
 		experiments.forEach(exp => {
