--- a/playground/tictactoe/index.html
+++ b/playground/tictactoe/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>GAME game</title>
+		<title>tic tac toe</title>
 		<meta charset="utf-8">
 		<meta name="description" content="">
 		<meta name="author" content="">
@@ -11,7 +11,18 @@
 	</head>
 
 	<body>
-		<canvas width="600" height="600"></canvas>
+		<div class="status"></div>
+		<div class="game-board">
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</div>
 	</body>
 
 	<script type="module" src="index.js"></script>
