--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			['playground/stack-css/index', 'Stack Game'],
 			['playground/uxn/rom', 'Web UXN'],
 			['playground/tictactoe/index', 'Tic Tac Toe'],
+			['playground/webrtc/index', 'Web RTC'],
 		];
 
 		experiments.forEach(exp => {
