--- a/playground/webrtc/index.html
+++ b/playground/webrtc/index.html
@@ -23,7 +23,10 @@
 				<pre id="log"></pre>
 				<div class="chat-input" style="display: none;">
 					<input id="incoming" type="text" autocomplete="off"></input>
-					<button id="chat-send" type="submit">submit</button>
+					<button id="chat-send" type="submit">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+							<path d="M2.01 21L23 12L2.01 3L2 10l15 2l-15 2z"/>
+						</svg></button>
 				</div>
 				<pre id="outgoing"></pre>
 				<button id="outgoing-copy">copy</button>
