--- a/playground/webrtc/index.html
+++ b/playground/webrtc/index.html
@@ -22,7 +22,7 @@
 				</div>
 				<pre id="log"></pre>
 				<div class="chat-input" style="display: none;">
-					<input id="incoming" type="text" autocomplete="off"></input>
+					<input id="incoming" type="text" autocomplete="off" placeholder="Message THEM..."></input>
 					<button id="chat-send" type="submit">
 						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
 							<path d="M2.01 21L23 12L2.01 3L2 10l15 2l-15 2z"/>
