--- a/playground/webrtc/index.html
+++ b/playground/webrtc/index.html
@@ -8,6 +8,7 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<link rel="stylesheet" href="index.css">
 		<meta name="color-scheme" content="dark light">
+		<link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cstyle%3E path %7B fill: %23333; %7D @media (prefers-color-scheme: dark) %7B path %7B fill: %23aaa; %7D %7D %3C/style%3E%3Cpath d='M2.01 21L23 12L2.01 3L2 10l15 2l-15 2z'%3E%3C/path%3E%3C/svg%3E">
 	</head>
 
 	<body>
