--- a/playground/rss-feed/rss-feed.html
+++ b/playground/rss-feed/rss-feed.html
@@ -15,13 +15,6 @@
 
 	<link rel="stylesheet" href="/colors.css">
 
-	<!--
-
-	TODO: add save to pocket button:
-		https://getpocket.com/publisher/button_docs
-
-	-->
-
 	<style>
 		body {
 			background-color: var(--main-theme-color);
@@ -94,7 +87,15 @@
 			document.body.innerHTML += `
 				<div class="feed-item ${className}">
 					<a href="${link}">${title}</a>
-					<div class="content">${_content || ''}</div>
+					<div class="content">
+					${_content || ''}
+					${ title !== 'Hacker News: Front Page'
+						? `<span>
+								<a href="https://widgets.getpocket.com/v1/popup?url=${link}" target="popup">add to pocket</a>
+							<span>`
+						: ''
+					}
+					</div>
 				</div>`;
 		};
 
@@ -115,7 +116,7 @@
 		(async () => {
 			const parser = new RSSParser();
 			const CORS_PROXY = 'https://api.allorigins.win/raw?url='
-			const feedUrl = "https://hnrss.org/frontpage?count=40";
+			const feedUrl = "https://hnrss.org/frontpage";
 			const feed = await parser.parseURL(CORS_PROXY+feedUrl);
 			FeedItem(feed, 'title');
 			feed.items.forEach(FeedItem);
