--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 			['playground/webgl-quad/webgl-quad', 'webgl-quad'],
 			['playground/pokedex/pokedex', 'pokedex'],
 			['playground/gameAsGame/index', 'GAME game'],
+			['playground/tictactoe/index', 'Tic Tac Toe'],
+			['playground/board/index', 'Game Board'],
 			['playground/sky-gradient/index', 'Sky Sim'],
 			['playground/stack-css/index', 'Stack Game'],
 			['playground/uxn/rom', 'Web UXN'],
-			['playground/tictactoe/index', 'Tic Tac Toe'],
 			['playground/webrtc/index', 'Web RTC'],
 		];
 
