board: add controls

--- a/playground/board/index.html
+++ b/playground/board/index.html
@@ -13,6 +13,14 @@
 	<body>
 		<div class="status"></div>
 		<div class="game-board"></div>
+		<form id="dims">
+			<label for="x">x</label>
+			<input name="x" value="5" type="number" min="1" max="20"/>
+			<label for="y">y</label>
+			<input name="y" value="5" type="number" min="1" max="20"/>
+			<button type="submit" class="refresh">&#x27f3;</button>
+		</form>
+
 	</body>
 
 	<script type="module" src="index.js"></script>
