--- a/playground/rss-feed/rss-feed.html
+++ b/playground/rss-feed/rss-feed.html
@@ -54,7 +54,7 @@
 					${ title !== 'Hacker News: Front Page'
 						? `<span>
 								<a href="https://widgets.getpocket.com/v1/popup?url=${link}" target="popup">add to pocket</a>
-							<span>`
+							</span>`
 						: ''
 					}
 					${_content ? (_content.split('</span>').slice(1).join('</span>')) : ''}
