update news feed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			['playground/kalman/kalman', 'kalman'],
 			['playground/mixed-canvas/mixed-canvas', 'mixed canvas'],
 			['playground/rangers-advent/rangers.advent', 'rangers-advent'],
-			['playground/rss-feed/rss-feed', 'rss-feed'],
+			['playground/rss-feed/index', 'News Feed'],
 			['playground/languages/shiki/shiki', 'shiki'],
 			['playground/tower.defense/tower.defense', 'tower defense'],
 			['playground/wave-function-collapse/wave-function', 'wave function collapse'],
