--- a/playground/cityBottle/index.html
+++ b/playground/cityBottle/index.html
@@ -16,18 +16,19 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+			margin:0;
 		}
 		canvas {
 			background: white;
-			width:99%;
+			width:100%;
 			image-rendering: pixelated;
-			max-width: 66vw;
+			max-width: 1000px;
 		}
 	</style>
 
 	<body onload="cityInABottle()">
+		<canvas id="c"></canvas>
 		<a href="https://twitter.com/KilledByAPixel/status/1517294627996545024">original</a>
-		<canvas id="c">
 	</body>
 
 	<script>
