city in a bottle

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 			['playground/stack-css/index', 'Stack Game'],
 			['playground/uxn/rom', 'Web UXN'],
 			['playground/webrtc/index', 'Web RTC'],
+			['playground/cityBottle/index', 'City In a Bottle'],
 		];
 
 		experiments.forEach(exp => {
