--- a/playground/pokedex/pokedex.html
+++ b/playground/pokedex/pokedex.html
@@ -132,9 +132,9 @@
 			</div>
 			<div>
 				<!-- <input id="search" type="tel" pattern="\d*" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"> -->
-				<button id="left">⬅</button>
+				<button id="left">ᐊ</button>
 				<input id="search" type="text" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
-				<button id="right">⮕</button>
+				<button id="right">ᐅ</button>
 			</div>
 		</div>
 	</body>
