rss feed, show what went wrong on mobile

--- a/playground/rss-feed/index.html
+++ b/playground/rss-feed/index.html
@@ -17,6 +17,16 @@
 	</head>
 
 	<body>
+		<div class="errors hidden">
+			<input type="checkbox" id="errorsToggle">
+			<div class="items"></div>
+			<label for="errorsToggle" class="menu">
+				<svg fill="currentColor" viewBox="0 0 27.963 27.963">
+					<polygon points="15.579 17.158 16.191 4.579 11.804 4.579 12.414 17.158 "/>
+					<path d="M13.998 18.546c-1.471 0-2.5 1.029-2.5 2.526c0 1.443 0.999 2.528 2.444 2.528h0.056c1.499 0 2.469-1.085 2.469-2.528 C16.441 19.575 15.468 18.546 13.998 18.546z"/>
+				</svg>
+			</label>
+		</div>
 	</body>
 
 	<script src="https://unpkg.com/rss-parser@3.12.0/dist/rss-parser.min.js"></script>
