--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 		const others = [
 			['https://crosshj.com', 'crosshj.com'],
+			['https://crosshj.com/grfx/', 'grfx'],
 			['https://chimpjuice.com', 'chimpjuice.com'],
 		];
 
